Address PR review comments on testing plan (round 2)
- Fix geographic description: L33xx sheets cover Pargas (south-west Finland),
  not northern-central Finland
- Specify exact GIS Data Importer invocation for the data-seeder container,
  including --input-dir path to the zip leaf directory, --municipalities path,
  DB connection args, and required volume mounts; add note that scan is
  non-recursive so --input-dir must point at the leaf directory

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>